--- a/application/admin/view/product_category/create.html
+++ b/application/admin/view/product_category/create.html
@@ -47,7 +47,7 @@
 							data-placement="top" data-original-title="微信小程序封面图，一级和三级分类显示；一级分类建议尺寸：600X250，三级分类建议尺寸：200X200"></i>
 						小程序封面图：</span>
 					<div class="col-sm-4 input-group">
-						<div class="fmr wh-80x80" data-name="wechat_app_cover"></div>
+						<div class="fmr wh-80x80" data-name="wxapp_cover"></div>
 					</div>
 				</div>
 				<div class="form-group">
