--- a/data/wxapp/pages/category/index.wxml
+++ b/data/wxapp/pages/category/index.wxml
@@ -8,13 +8,13 @@
       <view class="item {{current_category_id == item.id ? 'active' : ''}}" wx:for="{{categorys}}" wx:key="key" data-id="{{item.id}}" bindtap="switchTap"><view class="name">{{item.name}}</view></view>
     </scroll-view>
     <scroll-view class="category-right {{current_category_id == item.id ? '' : 'hide'}}" scroll-y="true" wx:for="{{categorys}}" wx:key="key">
-      <image mode="widthFix" class="cover" src="{{item.wechat_app_cover}}" wx:if="{{item.wechat_app_cover}}"></image>
+      <image mode="widthFix" class="cover" src="{{item.wxapp_cover}}" wx:if="{{item.wxapp_cover}}"></image>
       <button type="warn" data-id="{{item.id}}" bindtap="toProductListTap">进入{{item.name}}频道</button>
       <view class="items" wx:for="{{item.twoCategorys}}" wx:key="key" wx:for-item="item_two">
         <view class="title" data-id="{{item_two.id}}" bindtap="toProductListTap">{{item_two.name}}</view>
         <view class="items-box">
           <view class="item" wx:for="{{item_two.threeCategorys}}" wx:key="key" wx:for-item="item_three" data-id="{{item_three.id}}" bindtap="toProductListTap">
-            <image class="img" src="{{item_three.wechat_app_cover}}"></image>
+            <image class="img" src="{{item_three.wxapp_cover}}"></image>
             <view class="name">{{item_three.name}}</view>
           </view>
         </view>
