--- a/application/index/view/layouts/_foot_article.html
+++ b/application/index/view/layouts/_foot_article.html
@@ -18,8 +18,8 @@
 				{{/volist}}
 			</div>
 			<div class="right">
-				<h5>官方微信</h5>
-				<div class="wechat"><img src="/static/index/images/wechat.png"></div>
+				<h5>微信小程序</h5>
+				<div class="wechat"><img src="{{:Config('client.wx_app.qrcode')}}"></div>
 			</div>
 		</div>
 	</div>
