--- a/application/index/view/layouts/_site_nav_990.html
+++ b/application/index/view/layouts/_site_nav_990.html
@@ -29,7 +29,7 @@
 					<div class="layer-qrcode layer">
 						<span class="layer-mask"></span>
 						<a target="_top">
-							<img src="/static/index/images/wechat.png" alt="微信小程序">
+							<img src="{{:Config('client.wx_app.qrcode')}}" alt="微信小程序">
 						</a>
 						<p>微信小程序</p>
 					</div>
