--- a/application/index/view/shared/_right_sidebar.html
+++ b/application/index/view/shared/_right_sidebar.html
@@ -32,7 +32,7 @@
 				<li class="sldebar-qrcode">
 					<a class="quick-links-a" href="javascript:void(0);"><i class="iconfont">&#xe646;</i></a>
 					<div class="popup-default">
-						<img src="/static/index/images/wechat.png">
+						<img src="{{:Config('client.wx_app.qrcode')}}">
 					</div>
 				</li>
 				<li>
