--- a/application/admin/view/set/client.html
+++ b/application/admin/view/set/client.html
@@ -50,6 +50,18 @@
                     <div class="col-sm-8 input-group"><input class="form-control" name="name" value="{{$client.wx_app.name}}"></div>
                 </div>
                 <div class="form-group">
+                    <span class="col-sm-2 control-label"><i class="iconfont iconfont-question" data-toggle="tooltip" data-placement="top" data-original-title="客户端展示二维码"></i> 二维码：</span>
+                    <div class="col-sm-4 input-group">
+                        {{if !empty($client.wx_app.qrcode)}}
+                        <div class="fmr wh-80x80 uploaded" data-name="qrcode">
+                            <input name="qrcode" type="hidden" value="{{$client.wx_app.qrcode}}"><img src="{{$client.wx_app.qrcode}}"><i class="iconfont fmr_remove"></i>
+                        </div>
+                        {{else}}
+                        <div class="fmr wh-80x80" data-name="qrcode"></div>
+                        {{/if}}
+                    </div>
+                </div>
+                <div class="form-group">
                     <span class="col-sm-2 control-label">appid：</span>
                     <div class="col-sm-8 input-group"><input class="form-control" name="appid" value="{{$client.wx_app.appid}}"></div>
                 </div>
