--- a/application/index/view/account/login.html
+++ b/application/index/view/account/login.html
@@ -37,9 +37,9 @@
 									<input type="password" name="password" class="text" placeholder="密码">
 								</div>
 							</div>
-							<div class="safety">
+							<!-- <div class="safety">
 								<a class="forget-password" href="">忘记密码？</a>
-							</div>
+							</div> -->
 							<div class="login-btn">
 								<input type="submit" class="btn-img btn-entry bg-color" value="立即登录">
 							</div>
