--- a/application/admin/view/shared/_summernote.html
+++ b/application/admin/view/shared/_summernote.html
@@ -13,7 +13,9 @@ $(document).ready(function() {
 		    ['fontsize', ['fontsize']],
 		    ['color', ['color']],
 		    ['para', ['ul', 'ol', 'paragraph']],
+		    ['insert', ['link']],
 		    ['mypicture', ['mypicture']],
+		    ['view', ['fullscreen', 'codeview']]
 		],
 		height: 300,
     	fontSizes: ['8', '9', '10', '11', '12', '14', '18', '24', '36'],
