--- a/application/index/view/layouts/_foot.html
+++ b/application/index/view/layouts/_foot.html
@@ -14,6 +14,7 @@
 		</p>
 	</div>
 </div>
+{{:Config('system.statistical_code')}} 
 <script type="text/javascript" src="/static/index/plugins/jquery/3.3.1/jquery.js?v={{:Config('version.pc.version')}}"></script>
 <script type="text/javascript" src="/static/index/plugins/layer/3.1.1/layer.js?v={{:Config('version.pc.version')}}"></script>
 <script type="text/javascript" src="/static/index/script/common.js?v={{:Config('version.pc.version')}}"></script>
