--- a/application/admin/view/set/system.html
+++ b/application/admin/view/set/system.html
@@ -79,13 +79,17 @@
                 </div>
                 <div class="form-group">
                     <span class="col-sm-2 control-label">详细地址：</span>
-                    <div class="col-sm-8 input-group">
-                        <textarea class="form-control" rows="2" name="address">{{$system.address}}</textarea>
-                    </div>
+                    <div class="col-sm-8 input-group"><input class="form-control" name="address" value="{{$system.address}}"></div>
                 </div>
                 <div class="form-group">
                     <span class="col-sm-2 control-label">版权声明：</span>
                     <div class="col-sm-8 input-group"><input class="form-control" name="copyright" value="{{$system.copyright}}"></div>
+                </div>
+                <div class="form-group">
+                    <span class="col-sm-2 control-label">统计代码：</span>
+                    <div class="col-sm-8 input-group">
+                        <textarea class="form-control" rows="2" name="statistical_code">{{$system.statistical_code}}</textarea>
+                    </div>
                 </div>
                 <div class="form-group">
                     <span class="col-sm-2 control-label">备案信息：</span>
